force-app/main/default/objects/Opportunity/fields/Booking_Information_Completed__c.field-meta.xml
<CustomField>
    <fullName>Booking_Information_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Information Completed</label>
    <type>Checkbox</type>
</CustomField>