force-app/main/default/objects/Opportunity/fields/sugati__Adult_Old__c.field-meta.xml
<CustomField>
    <fullName>sugati__Adult_Old__c</fullName>
    <description>Historical Data</description>
    <inlineHelpText>Historical Data</inlineHelpText>
    <label>Adult Old</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>