force-app/main/default/objects/Opportunity/fields/sugati__Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__Agent_Name__c</fullName>
    <description>Agent name for OTUK</description>
    <formula>sugati__O_Agent_SC__r.sugati__SC_First_Name__c &amp; &quot; &quot;&amp;  sugati__O_Agent_SC__r.sugati__SC_Last_Name__c</formula>
    <label>Agent Name</label>
    <type>Text</type>
</CustomField>