force-app/main/default/objects/Opportunity/fields/sugati__Balance_paid_reminder__c.field-meta.xml
<CustomField>
    <fullName>sugati__Balance_paid_reminder__c</fullName>
    <inlineHelpText>Set own reminder to check balance paid, if not, send balance reminder to clients.</inlineHelpText>
    <label>Balance paid reminder</label>
    <type>DateTime</type>
</CustomField>