force-app/main/default/objects/Opportunity/fields/sugati__Booking_Form_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__Booking_Form_Received_Date__c</fullName>
    <label>Booking Form Completed Date</label>
    <type>Date</type>
</CustomField>