force-app/main/default/objects/Opportunity/fields/sugati__Booking_Form_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__Booking_Form_Sent_Date__c</fullName>
    <description>Enter the date when a Booking Form was sent.</description>
    <label>Booking Form Sent Date</label>
    <type>Date</type>
</CustomField>