force-app/main/default/objects/Opportunity/fields/sugati__Budget_Note__c.field-meta.xml
<CustomField>
    <fullName>sugati__Budget_Note__c</fullName>
    <label>Budget Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>