force-app/main/default/objects/Opportunity/fields/sugati__Check_ATOL_issued_correctly__c.field-meta.xml
<CustomField>
    <fullName>sugati__Check_ATOL_issued_correctly__c</fullName>
    <label>Check ATOL issued correctly</label>
    <type>DateTime</type>
</CustomField>