force-app/main/default/objects/Opportunity/fields/sugati__Check_supplier_payments__c.field-meta.xml
<CustomField>
    <fullName>sugati__Check_supplier_payments__c</fullName>
    <inlineHelpText>Check payments made to suppliers</inlineHelpText>
    <label>Check supplier payments</label>
    <type>DateTime</type>
</CustomField>