force-app/main/default/objects/Opportunity/fields/sugati__Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>sugati__Commission_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Finance team can check if the commission has been paid to agency</description>
    <inlineHelpText>Check if the commission has been paid</inlineHelpText>
    <label>Commission Paid?</label>
    <type>Checkbox</type>
</CustomField>