force-app/main/default/objects/Opportunity/fields/sugati__Confirm_Supplier_arrangements__c.field-meta.xml
<CustomField>
    <fullName>sugati__Confirm_Supplier_arrangements__c</fullName>
    <inlineHelpText>Confirm arrangements with suppliers.</inlineHelpText>
    <label>Confirm Supplier arrangements</label>
    <type>DateTime</type>
</CustomField>