force-app/main/default/objects/Opportunity/fields/sugati__Costing_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Costing_Type__c</fullName>
    <label>Costing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Selling Price Adjustment</fullName>
                <default>true</default>
                <label>Selling Price Adjustment</label>
            </value>
            <value>
                <fullName>Granular Mark Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>