force-app/main/default/objects/Opportunity/fields/sugati__Deposite_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>sugati__Deposite_Overwrite__c</fullName>
    <label>Deposit Overwrite</label>
    <summarizedField>sugati__Client_Group__c.sugati__CG_Deposit_Overwrite__c</summarizedField>
    <summaryForeignKey>sugati__Client_Group__c.sugati__CG_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>