force-app/main/default/objects/Opportunity/fields/sugati__Exchange_check__c.field-meta.xml
<CustomField>
    <fullName>sugati__Exchange_check__c</fullName>
    <formula>IF (  sugati__O_Exchange_Rate__r.Name = null, False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exchange check</label>
    <type>Checkbox</type>
</CustomField>