force-app/main/default/objects/Opportunity/fields/sugati__GBP_Margin_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__GBP_Margin_Value__c</fullName>
    <formula>IF ( sugati__Exchange_check__c = True, sugati__O_Margin__c  *  sugati__O_Exchange_Rate__r.sugati__ER_Exchange_Rate__c, sugati__O_Margin__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GBP Margin Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>