force-app/main/default/objects/Opportunity/fields/sugati__Is_Agency_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__Is_Agency_Booking__c</fullName>
    <formula>NOT(ISBLANK(sugati__O_Agent__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Agency Booking</label>
    <type>Checkbox</type>
</CustomField>