force-app/main/default/objects/Opportunity/fields/sugati__Is_in_last_year__c.field-meta.xml
<CustomField>
    <fullName>sugati__Is_in_last_year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is in last year</label>
    <type>Checkbox</type>
</CustomField>