force-app/main/default/objects/Opportunity/fields/sugati__Link_to_Vamoos__c.field-meta.xml
<CustomField>
    <fullName>sugati__Link_to_Vamoos__c</fullName>
    <formula>IF(ISBLANK(sugati__S_O_Vamoos_Id__c), &apos;&apos;, HYPERLINK( $Setup.sugati__Vamoos_Setting__c.sugati__Vamoos_URL__c + sugati__S_O_Vamoos_Id__c +&apos;/edit&apos;, &apos;Review on Vamoos&apos;,&apos;_blank&apos;) )</formula>
    <label>Link to Vamoos</label>
    <type>Text</type>
</CustomField>