force-app/main/default/objects/Opportunity/fields/sugati__Location__c.field-meta.xml
<CustomField>
    <fullName>sugati__Location__c</fullName>
    <description>Address of the Experience</description>
    <label>Location</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>