force-app/main/default/objects/Opportunity/fields/sugati__Margin_Flag__c.field-meta.xml
<CustomField>
    <fullName>sugati__Margin_Flag__c</fullName>
    <formula>IF(sugati__O_Suggested_Margin_Value__c &lt;  sugati__O_Margin_Value_With_Commission__c ,  IMAGE(&quot;https://c.eu5.content.force.com/servlet/servlet.FileDownload?file=01524000001UC4I&quot;, &quot;Margin Green&quot;, 20,140), 
 IMAGE(&quot;https://c.eu5.content.force.com/servlet/servlet.FileDownload?file=01524000001UC51&quot;, &quot;Margin Red&quot;, 20,140))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Flag</label>
    <type>Text</type>
</CustomField>