force-app/main/default/objects/Opportunity/fields/sugati__MV_W_Comm__c.field-meta.xml
<CustomField>
    <fullName>sugati__MV_W_Comm__c</fullName>
    <label>Margin Value After Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>