force-app/main/default/objects/Opportunity/fields/sugati__O_About_Tour_Trip__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_About_Tour_Trip__c</fullName>
    <label>About Tour Trip</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>