force-app/main/default/objects/Opportunity/fields/sugati__O_Accommodation_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Accommodation_Suppliers__c</fullName>
    <description>Comma-separated list of supplier Ids for accommodation (for room allocation)</description>
    <label>Accommodation Suppliers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>