force-app/main/default/objects/Opportunity/fields/sugati__O_Additional_Items_Label_Override__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Additional_Items_Label_Override__c</fullName>
    <label>Additional Items Label Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>