force-app/main/default/objects/Opportunity/fields/sugati__O_Additional_Reps_Agents_Arrival_report__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Additional_Reps_Agents_Arrival_report__c</fullName>
    <label>Additional Reps/ Agents Arrival report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>