force-app/main/default/objects/Opportunity/fields/sugati__O_Additional_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Additional_Text__c</fullName>
    <label>Additional Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>