force-app/main/default/objects/Opportunity/fields/sugati__O_Additional_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Additional_Value__c</fullName>
    <label>Additional Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>