force-app/main/default/objects/Opportunity/fields/sugati__O_Adult__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Adult__c</fullName>
    <inlineHelpText>Total no of adults in a given family.</inlineHelpText>
    <label>Adult</label>
    <summaryFilterItems>
        <field>sugati__Group_Member__c.sugati__GM_Actual_Occupancy_Type__c</field>
        <operation>equals</operation>
        <value>Adult</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>sugati__Group_Member__c.sugati__S_GM_Booking_Status__c</field>
        <operation>notEqual</operation>
        <value>Non-travelling,Booking Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Group_Member__c.sugati__GM_Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>