force-app/main/default/objects/Opportunity/fields/sugati__O_Agent__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Choose an agent if this is an agent booking.</inlineHelpText>
    <label>Agency</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>