force-app/main/default/objects/Opportunity/fields/sugati__O_Agent_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Agent_Commission__c</fullName>
    <formula>IF(NOT(ISBLANK(sugati__S_O_Total_Agent_Commission_Due_Booking__c)), 
    sugati__S_O_Total_Agent_Commission_Due_Booking__c, 
    IF(
        $Setup.sugati__Site__c.sugati__Agency_is_End_Customer__c, 
        sugati__S_O_Total_Agent_Commission_Rolled_up__c, 
        IF(
            (!ISBLANK(sugati__O_Agent_Commission_Amount__c) &amp;&amp; ISBLANK(sugati__O_Agent_Commission_percent__c)), 
            sugati__O_Agent_Commission_Amount__c, 
            IF(
                (!ISBLANK(sugati__O_Agent_Commission_percent__c) &amp;&amp; ISBLANK(sugati__O_Agent_Commission_Amount__c)),
                IF(
                    ISPICKVAL(sugati__O_Agent_Commission_Type__c , &apos;Margin&apos;),
                    ((sugati__O_Agent_Commission_percent__c/100)* sugati__O_Margin__c ), 
                    ((sugati__O_Agent_Commission_percent__c/100)*Amount)),
                IF(
                    (ISBLANK(sugati__O_Agent_Commission_Amount__c) &amp;&amp; ISBLANK(sugati__O_Agent_Commission_percent__c)), 
                    IF(
                        !ISBLANK(sugati__O_Agent__r.sugati__S_Commission_Value__c),
                        sugati__O_Agent__r.sugati__S_Commission_Value__c,
                        IF(
                            !ISBLANK(sugati__O_Agent__r.sugati__S_Commission_Value__c),
                            sugati__O_Agent__r.sugati__S_Commission_Value__c,
                            IF(
                                ISPICKVAL(sugati__O_Agent_Commission_Type__c , &apos;Margin&apos;),
                                ((sugati__O_Agent__r.sugati__S_Commission__c)* sugati__O_Margin__c ), 
                                ((sugati__O_Agent__r.sugati__S_Commission__c)*Amount))
                        )
                    ),
                    null
                ) 
            )
        )
    )
)</formula>
    <label>Agent Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>