force-app/main/default/objects/Opportunity/fields/sugati__O_Agent_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Agent_Commission_Amount__c</fullName>
    <label>Agent Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>