force-app/main/default/objects/Opportunity/fields/sugati__O_Agent_Commission_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Agent_Commission_Due_Date__c</fullName>
    <formula>IF( ISBLANK(sugati__O_Agent_Commission__c), null , sugati__O_Return_Date__c + $Setup.sugati__FormulaSV__c.sugati__O_Agent_Commission_Due_Date10__c )</formula>
    <label>Agent Commission Due Date</label>
    <type>Date</type>
</CustomField>