force-app/main/default/objects/Opportunity/fields/sugati__O_Agent_Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Agent_Commission_Type__c</fullName>
    <label>Agent Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Margin</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>