force-app/main/default/objects/Opportunity/fields/sugati__O_Agent_SC__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Agent_SC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sugati__Supplier_Contact__c.sugati__SC_Supplier__c</field>
            <operation>equals</operation>
            <valueField>$Source.sugati__O_Agent__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sugati__Supplier_Contact__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>