force-app/main/default/objects/Opportunity/fields/sugati__O_Allow_Non_Single_Supplement_in_Singles__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Allow_Non_Single_Supplement_in_Singles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Non-Single Supplement in Singles</label>
    <type>Checkbox</type>
</CustomField>