force-app/main/default/objects/Opportunity/fields/sugati__O_Allowed_Pre_and_Post_Days__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Allowed_Pre_and_Post_Days__c</fullName>
    <label>Allowed Pre and Post Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>