force-app/main/default/objects/Opportunity/fields/sugati__O_Ancillary_Charges__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Ancillary_Charges__c</fullName>
    <label>Ancillary Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>