force-app/main/default/objects/Opportunity/fields/sugati__O_APC_or_FFP_Non_Licensable_Charges__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_APC_or_FFP_Non_Licensable_Charges__c</fullName>
    <label>APC or FFP Non Licensable Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>