force-app/main/default/objects/Opportunity/fields/sugati__O_Apply_Discount__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Apply_Discount__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Apply Discount</label>
    <type>Checkbox</type>
</CustomField>