force-app/main/default/objects/Opportunity/fields/sugati__O_Are_Singles_allowed_in_Twin_rooms__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Are_Singles_allowed_in_Twin_rooms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are Singles allowed in Twin rooms?</label>
    <type>Checkbox</type>
</CustomField>