force-app/main/default/objects/Opportunity/fields/sugati__O_ATOL__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_ATOL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATOL</label>
    <type>Checkbox</type>
</CustomField>