force-app/main/default/objects/Opportunity/fields/sugati__O_ATOL_Issued_By__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_ATOL_Issued_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATOL Issued By</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Opportunities (ATOL Issued By)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>