force-app/main/default/objects/Opportunity/fields/sugati__O_ATOL_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_ATOL_Overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATOL Overwrite</label>
    <type>Checkbox</type>
</CustomField>