force-app/main/default/objects/Opportunity/fields/sugati__O_ATOL_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_ATOL_Type__c</fullName>
    <label>ATOL Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Package sale</fullName>
            </value>
            <value>
                <fullName>Flight Only</fullName>
            </value>
            <value>
                <fullName>Flight Plus</fullName>
            </value>
            <value>
                <fullName>PACKAGE MULTI</fullName>
            </value>
            <value>
                <fullName>PACKAGE SINGLE</fullName>
            </value>
            <value>
                <fullName>Flight-only sale</fullName>
                <isActive>false</isActive>
                <label>Flight-only sale</label>
            </value>
            <value>
                <fullName>Flight-plus sale 2A</fullName>
                <isActive>false</isActive>
                <label>Flight-plus sale 2A</label>
            </value>
            <value>
                <fullName>Flight-plus sale 2B</fullName>
                <isActive>false</isActive>
                <label>Flight-plus sale 2B</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>