force-app/main/default/objects/Opportunity/fields/sugati__O_Automated_survey_opt_out__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Automated_survey_opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Andy has requested this on 20th</description>
    <label>Automated survey opt-out</label>
    <type>Checkbox</type>
</CustomField>