force-app/main/default/objects/Opportunity/fields/sugati__O_Automatically_go_onto_Waiting_List__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Automatically_go_onto_Waiting_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically go onto Waiting List?</label>
    <type>Checkbox</type>
</CustomField>