force-app/main/default/objects/Opportunity/fields/sugati__O_Balance_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Balance_Price__c</fullName>
    <formula>Amount - sugati__O_Deposit_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>