force-app/main/default/objects/Opportunity/fields/sugati__O_Best_Time_To_Call_You__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Best_Time_To_Call_You__c</fullName>
    <label>Best Time To Call You</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Lunchtime</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>