force-app/main/default/objects/Opportunity/fields/sugati__O_Bond_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Bond_Type__c</fullName>
    <label>Bond Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Licenced</fullName>
            </value>
            <value>
                <fullName>Unlicenced</fullName>
            </value>
            <value>
                <fullName>Accommodation only</fullName>
            </value>
            <value>
                <fullName>Not protected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>