force-app/main/default/objects/Opportunity/fields/sugati__O_Booking_Contact__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Booking_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person who was making an enquiry for the booking.</inlineHelpText>
    <label>Booking Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>