force-app/main/default/objects/Opportunity/fields/sugati__O_Booking_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Booking_Currency__c</fullName>
    <label>Booking Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>