force-app/main/default/objects/Opportunity/fields/sugati__O_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Booking_Date__c</fullName>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>