force-app/main/default/objects/Opportunity/fields/sugati__O_Booking_Form_Instruction_Title__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Booking_Form_Instruction_Title__c</fullName>
    <label>Booking Form Instruction Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>