force-app/main/default/objects/Opportunity/fields/sugati__O_Booking_Form_Instructions__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Booking_Form_Instructions__c</fullName>
    <label>Booking Form Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>