force-app/main/default/objects/Opportunity/fields/sugati__O_Booking_Note_Internal__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Booking_Note_Internal__c</fullName>
    <label>Booking Note (Internal)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>