force-app/main/default/objects/Opportunity/fields/sugati__O_Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Booking_Number__c</fullName>
    <description>This is the field from the old system.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the field from the old system.</inlineHelpText>
    <label>Dhruv Booking No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>