force-app/main/default/objects/Opportunity/fields/sugati__O_Booking_Stat_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Booking_Stat_Code__c</fullName>
    <label>Booking Stat Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>