force-app/main/default/objects/Opportunity/fields/sugati__O_Booking_to_Departure__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Booking_to_Departure__c</fullName>
    <formula>sugati__O_Departure_Date__c -  sugati__O_Booking_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking to Departure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>