force-app/main/default/objects/Opportunity/fields/sugati__O_Booking_Week__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Booking_Week__c</fullName>
    <label>Booking Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>