force-app/main/default/objects/Opportunity/fields/sugati__O_Booking_Week_Actual__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Booking_Week_Actual__c</fullName>
    <formula>CEILING(((sugati__O_Booking_Date__c - DATE(YEAR(sugati__O_Booking_Date__c ), 1, 1) + 1) +
MOD(DATE(YEAR(sugati__O_Booking_Date__c ), 1, 1) - DATE(1900, 1, 7), 7)) / 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Week Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>