force-app/main/default/objects/Opportunity/fields/sugati__O_Brand__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>sugati__Brand__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>