force-app/main/default/objects/Opportunity/fields/sugati__O_Break_Through_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Break_Through_No__c</fullName>
    <label>Break Through No</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>