force-app/main/default/objects/Opportunity/fields/sugati__O_Budget__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Budget__c</fullName>
    <label>Budget</label>
    <length>150</length>
    <type>Text</type>
</CustomField>