force-app/main/default/objects/Opportunity/fields/sugati__O_Budget_End_Range__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Budget_End_Range__c</fullName>
    <label>Budget End Range</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>