force-app/main/default/objects/Opportunity/fields/sugati__O_Budget_specify__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Budget_specify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget specify</label>
    <type>Checkbox</type>
</CustomField>