force-app/main/default/objects/Opportunity/fields/sugati__O_Budget_Start_Range__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Budget_Start_Range__c</fullName>
    <label>Budget Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - 1000</fullName>
            </value>
            <value>
                <fullName>1000 - 3000</fullName>
            </value>
            <value>
                <fullName>3000 - 5000</fullName>
            </value>
            <value>
                <fullName>5000 - 10000</fullName>
            </value>
            <value>
                <fullName>10000 - 20000</fullName>
            </value>
            <value>
                <fullName>20000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>