force-app/main/default/objects/Opportunity/fields/sugati__O_Cancellation_Charge__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Cancellation_Charge__c</fullName>
    <label>Cancellation Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>