force-app/main/default/objects/Opportunity/fields/sugati__O_Cancellation_Percent__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Cancellation_Percent__c</fullName>
    <label>Cancellation Percent</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>