force-app/main/default/objects/Opportunity/fields/sugati__O_Charity_contribution__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Charity_contribution__c</fullName>
    <label>Charity contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>