force-app/main/default/objects/Opportunity/fields/sugati__O_Child_Old__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Child_Old__c</fullName>
    <label>Child Old</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>